Fix header title centering on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header {
 
 header > h2 {
     margin-left: auto;
-    margin-right: -3rem;
+    /*margin-right: -3rem;*/
     font-size: 1.5rem;
 }
 
